<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.sensorsdata.analytics.android.clockdemo.TimeView
                    android:id="@+id/tabTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTime"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                </com.sensorsdata.analytics.android.clockdemo.TimeView>

                <com.sensorsdata.analytics.android.clockdemo.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/lvAlarmList"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">

                    </ListView>
                    <Button
                        android:id="@+id/btnAddAlarm"
                        android:text="@string/btnAddAlarmText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.sensorsdata.analytics.android.clockdemo.AlarmView>

                <com.sensorsdata.analytics.android.clockdemo.TimerView
                    android:id="@+id/tabTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etHour"
                            android:inputType="number"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"/>
                            android:singleLine="true"/>

                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>

                        <EditText
                            android:id="@+id/etMinute"
                            android:inputType="number"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"/>

                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"/>

                        <EditText
                            android:id="@+id/etSecond"
                            android:inputType="number"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:singleLine="true"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llBtnGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start"/>

                        <Button
                            android:id="@+id/btnPause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pause"/>

                        <Button
                            android:id="@+id/btnResume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resume"/>

                        <Button
                            android:id="@+id/btnReset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset"/>
                    </LinearLayout>

                </com.sensorsdata.analytics.android.clockdemo.TimerView>

                <com.sensorsdata.analytics.android.clockdemo.StopWatchView
                    android:id="@+id/tabStopWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvHour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:text=":"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tvMinute"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:text=":"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tvSecond"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:text="."
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/tvMSceond"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                    </LinearLayout>

                    <ListView
                        android:id="@+id/lvWatchTimeList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </ListView>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btnSWStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start"/>

                        <Button
                            android:id="@+id/btnSWPause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pause"/>

                        <Button
                            android:id="@+id/btnSWResume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resume"/>

                        <Button
                            android:id="@+id/btnSWRecord"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/record"/>

                        <Button
                            android:id="@+id/btnSWReset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset"/>

                    </LinearLayout>
                </com.sensorsdata.analytics.android.clockdemo.StopWatchView>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
